--- a/keiba/templates/keiba/horses.html
+++ b/keiba/templates/keiba/horses.html
@@ -19,7 +19,7 @@ th, td {
         <th>馬齢</th>
         <th>性別</th>
     </tr>
-    {% for horse in horse_list %}
+    {% for horse in horses %}
     <tr>
         <td style="text-align: left;">{{ horse.name }}</td>
         <td style="text-align: center;">{{ horse.age }}</td>
@@ -27,10 +27,4 @@ th, td {
     </tr>
     {% endfor %}
 </table>
-<h3 style="margin-top: 2em;">新規登録フォーム</h3>
-<form action="{% url 'keiba:index' %}" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="登録" />
-</form>
 {% endblock %}
